# api_trading_game

./: .gitignore  Cargo.toml
migrations/2023-07-03-195641_cargo_info/: down.sql  up.sql
migrations/2023-07-03-203703_create_ports/: down.sql  up.sql
migrations/2023-07-03-204752_create_wants_cargo/: down.sql  up.sql
migrations/2023-07-03-210212_create_has_cargo/: down.sql  up.sql
migrations/2023-07-04-163027_cargo_info_unique_name/: down.sql  up.sql
migrations/2023-07-04-171140_create_ship_types/: down.sql  up.sql
migrations/2023-07-04-182545_create_crew_members/: down.sql  up.sql
migrations/2023-07-04-183304_create_crew_member_skills/: down.sql  up.sql
migrations/2023-07-05-182324_create_players/: up.sql
migrations/2023-07-05-183745_create_ships/: down.sql  up.sql
migrations/2023-07-05-200109_create_ship_cargo/: down.sql  up.sql
migrations/2023-07-05-200736_create_crew_to_ship/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/models/: cargo_info.rs  cargo_type.rs  crew_member.rs  crew_skill.rs  has_cargo.rs  mod.rs  ports.rs  ship_type.rs  wants_cargo.rs
src/models/cargo/: cargo_info.rs  cargo_type.rs  mod.rs
src/models/crew/: crew_member_skill.rs  crew_to_ship.rs  mod.rs
src/models/player/: player.rs
src/models/port/: mod.rs  ports.rs
src/models/ship/: mod.rs  ship.rs  ship_cargo.rs  ship_type.rs
src/server/: db_connections.rs  mod.rs  state.rs  user_utils.rs
src/server/handlers/: cargo.rs  mod.rs  player.rs  port.rs  ship.rs
