[package]
name = "api_trading_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "serde_json", "chrono"] }
dotenv = "0.15.0"
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
